.provarCaches/00D5f000005vwGkEAI/objects/rstkf__glrsn__c.object
<CustomObject>
    <customHelpPage>rstkf__objecthelp_glrsn</customHelpPage>
    <description>glrsn__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__glrsn_cmpno__r.rstkf__glcmp_cmpno__r.rstk__sycmp_cmpno__c&amp;&apos;_&apos;&amp; UPPER(rstkf__glrsn_code__c)</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>UPPER(rstkf__glrsn_code__c)+ &apos; (&apos; + LEFT( rstkf__glrsn_desc__c , (77 - LEN(rstkf__glrsn_code__c ) )) + &apos;)&apos;</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glrsn_cmpno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Company for which this record applies</inlineHelpText>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipName>glrsns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glrsn_code__c</fullName>
        <inlineHelpText>User-defined Reason Code identifier, up to 3 characters in length</inlineHelpText>
        <label>Reason Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glrsn_desc__c</fullName>
        <inlineHelpText>User-defined description, up to 100 characters in length</inlineHelpText>
        <label>Reason Code Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__searchindex__c</fullName>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Reason Code</label>
    <listViews>
        <fullName>rstkf__RS_GL_Reason_Codes</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glrsn_cmpno__c</columns>
        <columns>rstkf__glrsn_code__c</columns>
        <columns>rstkf__glrsn_desc__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Reason Codes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_GL_Reason_Codes_Filtered</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glrsn_cmpno__c</columns>
        <columns>rstkf__glrsn_code__c</columns>
        <columns>rstkf__glrsn_desc__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Reason Codes - Filtered</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reason Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstkf__companyisreqandnotbemodifiable</fullName>
        <active>true</active>
        <description>Company is required and cannot be modifiable</description>
        <errorConditionFormula>ISBLANK( rstkf__glrsn_cmpno__c ) 
||(!ISNEW() &amp;&amp; ISCHANGED( rstkf__glrsn_cmpno__c ))</errorConditionFormula>
        <errorMessage>Company is required and cannot be modifiable</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__reasoncodedesisreq</fullName>
        <active>true</active>
        <description>Reason Code Description is required</description>
        <errorConditionFormula>ISBLANK( rstkf__glrsn_desc__c )</errorConditionFormula>
        <errorMessage>Reason Code Description is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__reasoncodeisreqandnotmodified</fullName>
        <active>true</active>
        <description>Reason Code is required and cannot be modified</description>
        <errorConditionFormula>ISBLANK( rstkf__glrsn_code__c ) ||  ISNULL( rstkf__glrsn_code__c ) 
||(!ISNEW()&amp;&amp; ISCHANGED( rstkf__glrsn_code__c ))</errorConditionFormula>
        <errorMessage>Reason Code is required and cannot be modified</errorMessage>
    </validationRules>
</CustomObject>